research-prototype/wos/grafana/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    io.portainer.kubernetes.ingress.owner: admin
  name: grafana
  namespace: otel
spec:
  ingressClassName: traefik
  rules:
  - host: wos.local
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 80
        path: /grafana/
        pathType: Prefix
